--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -26,10 +26,8 @@
 <!-- Sidebar -->
 <nav class="sidebar" [class.open]="isSidebarOpen">
   <ul>
-    <li (click)="closeSidebar()">🏠 Home</li>
-    <li (click)="closeSidebar()">📚 Modules</li>
-    <li (click)="closeSidebar()">👤 Profile</li>
-    <li (click)="closeSidebar()">⚙️ Settings</li>
-    <li (click)="closeSidebar()">🚪 Logout</li>
+    <li *ngFor="let item of menuItems" (click)="routeTo(item.label)">
+      {{ item.icon }} {{ item.label }}
+    </li>
   </ul>
 </nav>
