--- a/src/app/app-header/app-header.component.css
+++ b/src/app/app-header/app-header.component.css
@@ -84,7 +84,7 @@
   height: 100%;
   background-color: #1e1e1e;
   color: white;
-  padding: 20px;
+  padding: 20px 0 20px 20px;
   box-shadow: 2px 0 6px rgba(0, 0, 0, 0.4);
   z-index: 1001;
   transition: left 0.3s ease;
